--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,18 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.13.4.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency> -->
+    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.4.0</version>
+    </dependency>
 
   </dependencies>
 </project>
