--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,13 @@ build/
 
 ### Mac OS ###
 .DS_Store
+src/test/java/Demo/Reverse_Number.java
+src/test/java/Demo/Reverse_String.java
+src/test/java/Demo/Second_least.java
+src/test/java/Demo/Temp_int.java
+src/test/java/Demo/Reverse_Number.java
+src/test/java/Demo/Reverse_String.java
+src/test/java/Demo/Second_least.java
+src/test/java/Demo/Reverse_Number.java
+src/test/java/Demo/Reverse_String.java
+src/test/java/Demo/Second_least.java
